0.02

0.01 2020-08-07T19:59:05+02:00
 - First version.