@@ -1,4 +1,5 @@
 0.02
+ - Update examples/ex1.pl example.
 
 0.01 2020-08-07T19:59:05+02:00
  - First version.
